fixed cutting of file date when scrollbar is visible

--- a/src/styles/dialogs.less
+++ b/src/styles/dialogs.less
@@ -40,7 +40,7 @@
 
 .files-container {
   height: 200px;
-  overflow: overlay;
+  overflow: scroll;
 
   .date {
     color: #777;
